Revision history for Perl extension POE::Component::SimpleDBI.

* 1.23

	Switched to Build.PL for the build system
	Fixed the stupid test dependencies, thanks BiNGOs!
	Added the new EXPERIMENTAL 'ATOMIC' support, please let me know if it's broken on your setup!
	Added some more author tests

* 1.22

	Kwalitee-related fixes

* 1.21

	silence warnings when used with DBD::SQLite - thanks to Sjors Gielen for tracking this down!

* 1.20

	Added the INSERT_ID to control $dbh->last_insert_id usage

* 1.19

	Added the PREPARE_CACHED argument to control caching

* 1.18

	Ignore the DBI error for last_insert_id and default to undef

* 1.17

	Added "INSERTID" to the result of DO

* 1.16

	Noticed a glaring documentation bug
		- SINGLE queries return mixedCaps rows ( not lowercase! )
		- MULTIPLE queries return lowercase rows

	This makes me *VERY* tempted to fix SINGLE to return lowercase, is this a good idea? Let me know!

	Fixed SimpleDBI failure on Win32 - thanks RT #23851

* 1.15

	Thanks to Fred Castellano, who stumbled on a DEADLOCK bug, fixed!
	Added sanity tests to CONNECT/DISCONNECT

* 1.14

	learned about the difference between ref $self and ref( $self )
	Kwalitee-related fixes

* 1.13

	Finally use a Changes file - thanks RT #18981
	Fixed a bug in SINGLE if returned_rows = 0 it will not return undef, but give us blank rows!
	Documentation tweaks

* 1.12

	In the SubProcess, added a binmode() to STDIN and STDERR, for the windows attempt
	Added code to make SimpleDBI work in Win32 boxes, thanks to the recent Wheel::Run patches!
	Documentation tweaks as usual

* 1.11

	Hannes had a problem:
		His IRC bot logs events to a database, and sometimes there is no events to log after
		hours and hours of inactivity ( must be a boring channel haha ), the db server disconnected!

	The solution was to do a $dbh->ping() before each query, if your DBI driver does it inefficiently, go yell at them!